--- a/sass/bs/variables.scss
+++ b/sass/bs/variables.scss
@@ -1,5 +1,30 @@
-// Your variable overrides
-//$body-bg: black;
-//$body-color: blue;
+// Colors
+
+$primary:      #ebcb80;
+$secondary:      #d1b471;
+$dark:           #7d7d7d;
+$darker:         #4b4b4b;
+$light:          #e6e6e6;
+$lighter:         #f6f6f6;
+$success:        #7feb7f;
+$danger:         #eb7f7f;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+///////////////////////////////////////
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
