--- a/sass/site/fonts.scss
+++ b/sass/site/fonts.scss
@@ -1,9 +1,10 @@
 body {
   //font-family: 'Open Sans', sans-serif;
   font-family: 'Dancing Script', cursive;
+  background-color: #aaa;
   color: greenyellow;
 }
 
 .h1 {
-  font-size: 36px; !important;
+  font-size: 36px !important;
 }
