--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,19 @@
 //@import "bs/variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+@import "site/mixins/mixins";
+
 @import "site/style";
-@import "site/fonts";
+@import "site/aligments";
 @import "site/variables";
+@import "site/backgrounds";
+@import "site/colors";
+@import "site/borders";
+@import "site/effects";
+@import "site/buttons";
+@import "site/fonts";
+@import "site/links";
+@import "site/sizes";
+@import "site/svgs";
+@import "site/spacings";
+@import "site/z-index";
