--- a/sass/site/fonts.scss
+++ b/sass/site/fonts.scss
@@ -1,10 +1,130 @@
 body {
-  //font-family: 'Open Sans', sans-serif;
-  font-family: 'Dancing Script', cursive;
-  background-color: #aaa;
+  font-family: 'Source Sans Pro', sans-serif;
+  //font-family: 'Dancing Script', cursive;
   color: greenyellow;
+  @include font(16px, 24px);
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-bottom: 0;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.l-spacing-1 {
+  letter-spacing: 1px;
+}
+
+.l-spacing-2 {
+  letter-spacing: 2px;
+}
+
+.lh-unset {
+  line-height: unset !important;
+}
+
+.text-nowrap {
+    white-space: nowrap;
+}
+
+.text-nowrap-xl {
+  @include media-breakpoint-up(xl) {
+    white-space: nowrap;
+  }
+}
+
+.montserrat {
+  font-family: Montserrat, sans-serif;
 }
 
 .h1 {
-  font-size: 36px !important;
+  @include font(32px, 48px);
+  @include media-breakpoint-up(md) {
+    @include font(36px, 52px);
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(64px, 84px);
+  }
+}
+
+.h2 {
+  @include font(26px, 40px);
+  @include media-breakpoint-up(md) {
+    @include font(32px, 48px);
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(54px, 72px);
+  }
+}
+
+.h3 {
+  @include font(22px, 33px);
+  @include media-breakpoint-up(md) {
+    @include font(32px, 48px);
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(34px, 66px);
+  }
+}
+
+.h4 {
+  @include font(18px, 27px);
+  @include media-breakpoint-up(md) {
+    @include font(20px, 30px);
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(24px, 36px);
+  }
+}
+
+.caption-1 {
+  @include font(16px, 24px);
+  @include media-breakpoint-up(md) {
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(28px, 42px);
+  }
+}
+
+.caption-2 {
+  @include font(16px, 24px);
+  @include media-breakpoint-up(md) {
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(24px, 32px);
+  }
+}
+
+.caption-3 {
+  @include font(16px, 24px);
+  @include media-breakpoint-up(md) {
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(18px, 27px)
+  }
+}
+
+
+.text-size-1 {
+  @include font(16px, 24px)
+}
+
+.price-fonts-size {
+  @include font(32px, 22x);
+  @include media-breakpoint-up(md) {
+    @include font(36px, 26px);
+  }
+  @include media-breakpoint-up(xl) {
+    @include font(64px, 44px);
+  }
 }
