--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,6 @@
 @import "site/svgs";
 @import "site/spacings";
 @import "site/z-index";
+@import "site/placeholder";
+@import "site/circles";
+@import "site/swiper";
