--- a/sass/site/variables.scss
+++ b/sass/site/variables.scss
@@ -23,6 +23,7 @@ $form-line-height: 20px;
 $form-border-width: 1px;
 
 $transition-speed: .2s;
+$transition-speed: .2s;
 
 
 ////////////////// Form end
