--- a/sass/site/style.scss
+++ b/sass/site/style.scss
@@ -179,26 +179,32 @@ a {
   bottom: 0;
   right: 15%;
   transform: translateY(50%);
+
   &-pic {
     object-fit: cover;
-    @include square-size(73px)
   }
 }
 
 .plan {
   &-picture {
     width: 100%;
-    height: 150px;
+    height: 100%;
     object-fit: cover;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
+    &-div  {
+      width: 100%;
+      height: 150px;
+    }
   }
   &-descr {
     height: 96px;
   }
 }
 
-
+.forms textarea {
+  height: 94px;
+}
 
 .my-btn {
   //@extend .px-40;
