--- a/sass/site/backgrounds.scss
+++ b/sass/site/backgrounds.scss
@@ -44,3 +44,7 @@ body {
 .bg-touch {
   background: url("/images/background-touch.png") no-repeat center center/cover;
 }
+
+.bg-transparent {
+  background-color: transparent !important;
+}
