--- a/sass/site/circles.scss
+++ b/sass/site/circles.scss
@@ -25,8 +25,10 @@
   fill: none;
   stroke-width: 1;
   stroke-linecap: square;
-  animation: progress 1s ease-out forwards;
-  stroke: $primary
+  animation: progress 2s ease-out forwards;
+  stroke: $primary;
+  transform: rotate(90deg) scale(-1,1);
+  transform-origin: center;
 }
 
 @keyframes progress {
@@ -38,4 +40,8 @@
 .percentage {
   fill: #666;
   text-anchor: middle;
+}
+
+.full-circle {
+  width: 100%;
 }
