--- a/sass/site/fonts.scss
+++ b/sass/site/fonts.scss
@@ -1,12 +1,13 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   //font-family: 'Dancing Script', cursive;
-  color: greenyellow;
+  color: $darker;
+  //color: greenyellow;
   @include font(16px, 24px);
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 .bold {
@@ -63,7 +64,7 @@ body {
     @include font(32px, 48px);
   }
   @include media-breakpoint-up(xl) {
-    @include font(54px, 72px);
+    @include font(32px, 48px);
   }
 }
 
