--- a/sass/site/swiper.scss
+++ b/sass/site/swiper.scss
@@ -11,3 +11,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.swiper-button-prev:after, .swiper-button-next:after {
+  display: none;
+}
