--- a/sass/site/swiper.scss
+++ b/sass/site/swiper.scss
@@ -15,3 +15,23 @@
 .swiper-button-prev:after, .swiper-button-next:after {
   display: none;
 }
+
+.swiper-pagination-bullet {
+  //display: none !important;
+}
+
+.my-swiper-container.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 8px;
+  @include square-size(8px);
+  border-radius: 50%;
+  background-color: #fff;
+  border: 2px solid #000;
+  cursor: pointer;
+  opacity: 1;
+  &-active {
+    background-color: #000;
+  }
+  @include media-breakpoint-up(xl) {
+    @include square-size(14px);
+  }
+}
