--- a/sass/site/standards.scss
+++ b/sass/site/standards.scss
@@ -13,3 +13,28 @@
     padding-bottom: 20px;
   }
 }
+
+.footer-block {
+  &-title {
+    @include font(16px, 24px);
+    font-weight: bold;
+    padding-bottom: 10px;
+    @include media-breakpoint-up(md) {
+      padding-bottom: 15px;
+    }
+    @include media-breakpoint-up(xl) {
+      @include font(24px, 32px);
+      padding-bottom: 20px;
+    }
+  }
+  &-list {
+    @include font(16px, 24px);
+    padding-top: 10px;
+    @include media-breakpoint-up(md) {
+      padding-top: 15px;
+    }
+    @include media-breakpoint-up(xl) {
+      padding-top: 20px;
+    }
+  }
+}
