--- a/sass/site/style.scss
+++ b/sass/site/style.scss
@@ -161,6 +161,13 @@ a {
   border-radius: 4px;
 }
 
+.textarea-height {
+  height: 90px;
+  @include media-breakpoint-up(xl){
+    height: 95px;
+  }
+}
+
 .plan-price {
   top: 0;
   left: 0;
