--- a/sass/site/standards.scss
+++ b/sass/site/standards.scss
@@ -38,3 +38,19 @@
     }
   }
 }
+
+.input-form {
+  width: 100%;
+  height: 36px;
+  padding: 7px 11px;
+  border-radius: 4px;
+  background-color: #fff;
+  @include font(16px, 24px);
+  margin-bottom: 15px;
+  padding-left: 15px;
+  @include media-breakpoint-up(md) {
+  }
+  @include media-breakpoint-up(xl) {
+    margin-bottom: 20px;
+  }
+}
