--- a/sass/site/swiper.scss
+++ b/sass/site/swiper.scss
@@ -30,6 +30,7 @@
   opacity: 1;
   &-active {
     background-color: #000;
+    transition: background-color 1s ease;
   }
   @include media-breakpoint-up(xl) {
     @include square-size(14px);
