--- a/sass/site/effects.scss
+++ b/sass/site/effects.scss
@@ -36,21 +36,26 @@
 }
 
 .plan-picture {
-  &:hover {
+  &-div {
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border-top-right-radius: 8px;
+      border-top-left-radius: 8px;
+      background: linear-gradient(180deg, rgba(60, 60, 60, 0.2) 0%, rgba(60, 60, 60, 0.7) 100%);
+      z-index: 0;
+      pointer-events: none;
+    }
+  }
+}
+
+.cards-hover {
+  &:hover .plan-picture{
     transform: scale(1.1);
     transition: transform 1s ease;
-  }
-  &-div:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-    background: linear-gradient(180deg, rgba(60, 60, 60, 0.2) 0%, rgba(60, 60, 60, 0.7) 100%);
-    z-index: 0;
-    pointer-events: none;
   }
 }
