--- a/sass/site/style.scss
+++ b/sass/site/style.scss
@@ -208,13 +208,16 @@ a {
   &-picture {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
+    transition: 1.5s;
     &-div  {
       width: 100%;
       height: 150px;
       overflow: hidden;
+      position: relative;
+      display: block;
+      z-index: 1;
+      border-top-right-radius: 8px;
+      border-top-left-radius: 8px;
     }
   }
   &-descr {
