--- a/sass/site/backgrounds.scss
+++ b/sass/site/backgrounds.scss
@@ -35,15 +35,15 @@ body {
 }
 
 .bg-title {
-   background: url("/images/background-header.png") no-repeat center center/cover;
+   background: url("../images/background-header.png") no-repeat center center/cover;
  }
 
 .bg-clients {
-  background: url("/images/background-clients.png") no-repeat center center/cover;
+  background: url("../images/background-clients.png") no-repeat center center/cover;
 }
 
 .bg-touch {
-  background: url("/images/background-touch.png") no-repeat center center/cover;
+  background: url("../images/background-touch.png") no-repeat center center/cover;
 }
 
 .bg-transparent {
